# finance-chatbot

./: .gitignore  README.md  assignment_intro.md  package.json  test questions and answers.txt  test.txt
backend/: Dockerfile  chatbot.ipynb  docker-compose.yaml  env.example  pyproject.toml
backend/api/: server.py
backend/api/auth/: auth_router.py  schemas.py  services.py
backend/api/chatbot/: agents.py  chatbot_router.py  models.py  schemas.py  services.py
backend/api/chatbot/doc_loaders/: __init__.py  csv_loader.py  image_services.py  pdf_loader.py  ppt_loader.py
backend/api/database/: db.py
backend/api/user/: models.py  schemas.py  services.py  users_router.py
backend/api/utils/: hash_file.py  id_generator.py  logger.py
backend/data/: MIC_3e_Ch11.pptx
backend/data/ppt_images/: ppt_image_summaries.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/auth/: AuthProvider.tsx  Login.css  Login.tsx
frontend/src/utils/: token-services.ts
